<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Questionnaire</string>
    <string name="action_settings">Settings</string>
    <string name="label_submit_percent" formatted="false">%d/%d</string>
    <string name="label_about">About</string>
    <string name="label_about_desc">\u3000Publish questionnaire with your phone. You can search username or scan user\'s captcha card to find and follow th user, then what this user published will appear on your Follow Tab. Remember, if you followed one user, then you answer and committed his questionnaire, one day, you cancel following this user, this user will disappear in you Follow Tab, but what you submitted will not be deleted from his questionnaire. Once you signed up, you can publish questionnaire. Welcome to leave your feedbacks.</string>
    <string name="msg_update_fail">Update failed.</string>
    <string name="msg_login_fail">Operation failed.</string>
    <string name="msg_login_suc">welcome</string>
    <string name="msg_username_or_psw_err">Username or password not correct.</string>
    <string name="msg_check_network">Please check your network</string>
    <string name="msg_register_suc">welcome</string>
    <string name="msg_login_first">Please login first.</string>
    <string name="msg_phone_exists">Phone number exists.</string>
    <string name="msg_username_exists">Username exists.</string>
    <string name="label_exit_title">Exit</string>
    <string name="label_exit_desc">Are you going to logout?</string>
    <string name="msg_questionnaire_cannot_be_empty">Questionnaire cannot be empty.</string>
    <string name="msg_questionnaire_commit_suc">Commit successfully.</string>
    <string name="msg_questionnaire_commit_fail">Commit failed:</string>
    <string name="msg_please_relogin">Please logout and than login.</string>
    <string name="msg_questionnaire_name_cannot_be_empty">Questionnaire title cannot be empty.</string>
    <string name="msg_contains_special">\"|\" and \"~\" are not allowed.</string>
    <string name="msg_please_input_content">Question content</string>
    <string name="label_delete_questionnaire_title">Delete Questionnaire</string>
    <string name="label_delete_questionnaire_desc">Are you going to delete this questionnaire?</string>
    <string name="label_exit_questionnaire_title">Leave Questionnaire</string>
    <string name="label_exit_questionnaire__desc">Are you going to leave?</string>
    <string name="label_share_title">Share Excel File</string>
    <string name="msg_file_not_exists">File not exists.</string>
    <string name="label_delete_local_questionnaire_desc">Are you going to delete local questionnaire result?</string>
    <string name="label_pull">Pull to refresh</string>
    <string name="label_loading">loading</string>
    <string name="label_release">Release to refresh</string>
    <string name="msg_export_fail">Exporting failed</string>
    <string name="msg_no_sd_card">No SD card</string>
    <string name="label_delete_paper">Delete Questionnaire</string>
    <string name="label_delete_paper_desc">Are you going to delete this questionnaire?</string>
    <string name="label_app_name">MobileQuestionnaire</string>
    <string name="label_share_code">Share Captcha</string>
    <string name="msg_get_code_fail">Getting captcha failed</string>
    <string name="label_no_question">No question</string>
    <string name="msg_no_special">\"~\" and \"|\" are not allowed</string>
    <string name="msg_commit_suc">Submitted successfully</string>
    <string name="msg_fill_form">Please answer all the question</string>
    <string name="label_not_complete">Leave the questionnaire</string>
    <string name="label_not_complete_desc">Are you going to leave?</string>
    <string name="label_questionnaire_list">Questionnaire List</string>
    <string name="label_check_network">Please check the network</string>
    <string name="label_delete_follow">Cancel Following</string>
    <string name="label_delete_follow_desc">Are you going to cancel following this user?</string>
    <string name="msg_follow_suc">Followed successfully</string>
    <string name="msg_follow_fail">Followed failed</string>
    <string name="msg_have_followed">Followed</string>
    <string name="msg_relogin">Please exit and login again</string>
    <string name="msg_search_content_empty">Please input content</string>
    <string name="msg_result_null">No result</string>
    <string name="msg_search_result">Result:</string>
    <string name="msg_search_fail">Searching failed</string>
    <string name="label_search_error">error</string>
    <string name="msg_press_again">Pressing again to exit app.</string>
    <string name="msg_coming">coming</string>
    <string name="label_excel_form">Excel</string>
    <string name="label_published">Published</string>
    <string name="label_new_publish">New</string>
    <string name="label_my_fans">Fans</string>
    <string name="label_about_title">About</string>
    <string name="label_about_second_title">V 1.1 QQ Group:124590159</string>
    <string name="label_add_questionnaire">New Questionnaire</string>
    <string name="label_commit">Submit</string>
    <string name="label_questionnaire_name">Questionnaire Name:</string>
    <string name="hint_question_content">Input question</string>
    <string name="label_add_one_question">Add a question</string>
    <string name="label_captcha_card">Captcha Card</string>
    <string name="label_scand_to_find_me">Scand to find me</string>
    <string name="label_questionnaire_result_list">Questionnaire Result List</string>
    <string name="label_operate_desc">Click to open, swipe left to operate</string>
    <string name="label_fans_list">Fans List</string>
    <string name="label_register">Register</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_login_with_others">Login with other apps</string>
    <string name="label_member_list">Member List</string>
    <string name="label_monitor_center">Monitor Center</string>
    <string name="label_published_questionnaire">Published Questionnaires</string>
    <string name="label_manage_questionnaire">Manage Questionnaires</string>
    <string name="label_export_to_excel">Export te excel</string>
    <string name="label_delete_this_paper">Delete this questionnaire</string>
    <string name="label_submit">Submit</string>
    <string name="label_questionnaire_detail">Questionnire Detail</string>
    <string name="label_last_question">Last question</string>
    <string name="label_next_question">Next question</string>
    <string name="label_questionnaire_lists">Questionnaire List</string>
    <string name="label_register_title">Register</string>
    <string name="label_register_phone">Mobilephone Number</string>
    <string name="label_register_name">Username</string>
    <string name="label_register_password">Password</string>
    <string name="label_register_button">Register</string>
    <string name="label_search_monitor">Search User</string>
    <string name="label_scan">Scan Captcha</string>
    <string name="label_scan_fail">Scanning failed</string>
    <string name="label_setting">Setting</string>
    <string name="label_exit_login">logout</string>
    <string name="label_follow">Follows</string>
    <string name="label_me">Me</string>
    <string name="label_explore">Explore</string>
    <string name="label_title">Title</string>
    <string name="label_desc">Description</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_delete">Delete</string>
    <string name="label_find_monitor">Find User</string>

</resources>
