<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_very_light" >

    <com.onion.paper.view.CustomedActionBar
        xmlns:ab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ab_new_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        ab:title="@string/label_add_questionnaire"
        ab:rightText="@string/label_commit"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_questionnaire_name"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/et_questionnaire_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shape_edittext_radius"
            android:padding="5dp"
            android:textSize="17sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"/>

    <ListView
        android:id="@+id/lv_new_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <EditText
        android:id="@+id/et_new_question"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/shape_edittext_rect"
        android:padding="5dp"
        android:hint="@string/hint_question_content" />

    <LinearLayout
        android:id="@+id/ll_add_question"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_button_rect"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitXY"
            android:src="@drawable/add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/label_add_one_question" />
    </LinearLayout>

</LinearLayout>