<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/shape_bg_operate" >

    <TextView 
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/label_title"
        android:gravity="center"
        android:background="@drawable/shape_bg_top_radius_grey"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_line" />

    <TextView 
        android:id="@+id/tv_dialog_desc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/label_desc"
        android:background="@color/white"
        android:textColor="@color/grey_text"
        android:gravity="center"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/label_confirm"
            android:gravity="center"
            android:padding="10dp"
            android:clickable="true"
            android:textColor="@color/blue_dark"
            android:background="@drawable/selector_btn_left_down_customed" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grey_line" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/label_cancel"
            android:gravity="center"
            android:padding="10dp"
            android:clickable="true"
            android:textColor="@color/blue_dark"
            android:background="@drawable/selector_btn_right_down_customed" />
    </LinearLayout>

</LinearLayout>