<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_very_light"
    android:orientation="vertical" >

    <com.onion.paper.view.CustomedActionBar
        xmlns:ab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cab_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        ab:title="@string/label_about_title" />

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_center_item"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="关于我们"
            android:textSize="14sp" />
    </LinearLayout>
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_about_second_title"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_about_desc"
                android:textColor="@color/grey_text" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>