<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_very_light" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginBottom="20dp"
        android:background="@color/blue"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/selector_register_text"
            android:clickable="true"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/label_register"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_edittext_radius"
        android:cursorVisible="true"
        android:hint="@string/label_username"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_edittext_radius"
        android:cursorVisible="true"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/selector_button_radius"
        android:enabled="false"
        android:minHeight="0dp"
        android:text="@string/label_login"
        android:textColor="@color/white"
        android:textSize="16sp" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="40dp">
        <View 
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="1px"
        android:background="@color/grey_line"/>
        <TextView 
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login_with_others"
            android:textColor="@color/grey_text"
            android:textSize="9sp"/>
        <View 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="1px"
	        android:background="@color/grey_line"/>
    </LinearLayout>

    
     <com.onion.paper.view.CircleImage
         android:layout_gravity="center_horizontal"
         android:id="@+id/ci_qq"
         android:clickable="true"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:scaleType="fitXY"
         android:src="@drawable/selector_qq"/>
</LinearLayout>