<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_very_light"
    android:orientation="vertical">

    <com.onion.paper.view.CustomedActionBar
        xmlns:ab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cab_operate_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginBottom="20dp"
        ab:rightIcon="@drawable/refresh"
        ab:title="@string/label_manage_questionnaire" />

    <TextView
        android:id="@+id/tv_paper_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="17sp" />
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_line"/>
    
    <WebView 
        android:id="@+id/wv_paper_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </WebView>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/pink">
    <LinearLayout
        android:id="@+id/ll_export"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_button_radius" >

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/export" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/label_export_to_excel"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/selector_button_exit"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/swipe_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/label_delete_this_paper"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>